# advent-of-code-2023

./: Cargo.toml
benches/: day_1.rs  day_2.rs  day_3.rs
src/: main.rs
src/day_1/: part_1.rs  part_2.rs
src/day_2/: part_1.rs  part_2.rs
src/day_3/: part_1.rs  part_2.rs
