[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8"
regex = "1.10"
criterion = "0.4"

[[bench]]
name = "day_1"
harness = false

[[bench]]
name = "day_2"
harness = false

[[bench]]
name = "day_3"
harness = false
